--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -26,7 +26,7 @@ jobs:
           # - ubuntu-20.04_x86_64
           # - ubuntu-22.04_x86_64
           - android
-    runs-on: buildjet-4vcpu-ubuntu-2204
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - name: Disk Cleanup
